...
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:textColor="?android:attr/textColorSecondary"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <RatingBar
            android:id="@+id/deck_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="45dp"
            android:max="5"
            android:numStars="5"
            android:rating="0.0"
            android:stepSize=".0" />
        </LinearLayout>
        <Button
            android:id="@+id/recent_item_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
