...
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>

    <string-array name="fb_dialog_list">
        <item>@string/tags_text</item>
        <item>@string/update_rating_text</item>
        <item>@string/delete_text</item>
...
