<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo</string>
    <string name="website_versions_view">https://anymemo.org/versions-view</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
...
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="user_name">Name</string>
    <string name="creation_date">Creation date</string>
    <string name="longest_login_streak">Longest login streak</string>
    <string name="current_login_streak">Current login streak</string>
    <string name="view_statistic">View statistic</string>
    <string name="updating_database">Updating database...</string>
    <string name="invalid_rating_given">Invalid rating</string>
    <string name="edit_account">Edit Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_register">Register</string>
    <string name="confirm">Confirm</string>
...
