<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/date_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="5"
        android:contentDescription="date_text"
        android:text="TextView"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/points_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="points"
        android:text="TextView"
        android:textAlignment="textEnd"
        android:textSize="24sp" />
</LinearLayout>